# sfrth2bf

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  Makefile  config.h.cmake
sbf2c/: CMakeLists.txt  Makefile.in  bf2c.c
sfrth2bf/: CMakeLists.txt  Makefile.in  dict.4th  main.cpp
sfrth2bf/include/: compiler.hh  compiler.hpp  config.hh  config.hpp  exception.hh  exception.hpp  generator.hh  generator.hpp  word.hh  word.hpp
sfrth2bf/src/: CMakeLists.txt  compiler.cc  compiler.cpp  config.cc  config.cpp  frth_lex.l  frth_lex.ll  main.cc  word.cc  word.cpp
test/: CMakeLists.txt  Makefile.in  test.4th  test_num.sh
