project(sfrth2bf)
cmake_minimum_required(VERSION 2.8)
#set( CMAKE_C_COMPILER gcc )
#set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -W -O2 -g -ggdb" )
#set( CMAKE_CXX_COMPILER g++ )
#set( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_CXX_FLAGS}" )
#option(BUILD_TEST "Whether compiler tests)

option(ENABLE_TESTS "Set to OFF to skip tests." On)
option(ENABLE_BF2C "Set to ON to build sbf2c." On)

set(${PROJECT_NAME}_VERSION_MAJOR 0)
set(${PROJECT_NAME}_VERSION_MINOR 0)
set(${PROJECT_NAME}_VERSION_MICRO 2)
set(${PROJECT_NAME}_VERSION
	"${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_MICRO}")

include(ConfigureChecks.cmake)
configure_file(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(sfrth2bf)
add_subdirectory(sbf2c)
if(ENABLE_TESTS)
	enable_testing()
	add_subdirectory(test)
endif(ENABLE_TESTS)

message( STATUS )
message( STATUS "-------------------------------------------------------------------------------" )
message( STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}" )
message( STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}" )
#MESSAGE( STATUS "INSTALL_DOC = ${INSTALL_DOC}" )
message( STATUS "ENABLE_TESTS = ${ENABLE_TESTS}" )
message( STATUS "Components enabled:" )
message( STATUS "   - sfrth2bf" )
message( STATUS "   - libsfrth.so" )

if(ENABLE_BF2C)
 message( STATUS "   - sbf2c				(ENABLE_BF2C = ${ENABLE_BF2C})" )
endif(ENABLE_BF2C)

if(NOT ENABLE_BF2C)
 message( STATUS "Components disabled:")
 if(NOT ENABLE_BF2C)
  message ( STATUS "   - sbfc				(ENABLE_BF2C = ${ENABLE_BF2C})")
 endif(NOT ENABLE_BF2C)
endif(NOT ENABLE_BF2C)

message( STATUS )
message( STATUS "Change a value with: cmake -D<Variable>=<Value>" )
message( STATUS "-------------------------------------------------------------------------------" )
message( STATUS )
